--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<nav   class="navbar navbar-light bg-light"  id="navbar-header" >
+        <div class="navbar-brand"  id="navbar-title">
+          Hassantuk Reporting
+        </div>
+        <button class="btn btn-primary" type="submit">Logout</button>
+
+      </nav>
