--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <form class="login-form">
 
         <div id="loginIntroDefault"><div class="logo">
-        </div><h4>Welcome to Hassantuk-Reporting</h4>
+        </div><h4 style="color: cornflowerblue; margin-left: 25%;"> Hassantuk Reporting</h4>
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1">Username :</label>
@@ -12,5 +12,5 @@
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
 
-    <button type="Login" class="btn btn-primary form-control" onclick="login()">Login</button>
+    <button type="Login" class="btn btn-primary form-control" (click)="login()">Login</button>
   </form>
