--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 <nav   class="navbar navbar-light bg-light"  id="navbar-header" >
+
         <div class="navbar-brand"  id="navbar-title">
           Hassantuk Reporting
         </div>
@@ -7,51 +8,31 @@
       </nav>
 
       <div class="container-fluid">
-            <div class="row">
-                <div class="col-2 collapse d-md-flex bg-light pt-2 min-vh-100" id="sidebar">
-                    <ul class="nav flex-column flex-nowrap">
-                        <li class="nav-item"><a class="nav-link" href="#">Overview</a></li>
-                        <li class="nav-item">
-                            <a class="nav-link collapsed" href="#submenu1" data-toggle="collapse" data-target="#submenu1">Reports</a>
-                            <div class="collapse" id="submenu1" aria-expanded="false">
-                                <ul class="flex-column pl-2 nav">
-                                    <li class="nav-item"><a class="nav-link py-0" href="#">Orders</a></li>
-                                    <li class="nav-item">
-                                        <a class="nav-link collapsed py-1" href="#submenu1sub1" data-toggle="collapse" data-target="#submenu1sub1">Customers</a>
-                                        <div class="collapse" id="submenu1sub1" aria-expanded="false">
-                                            <ul class="flex-column nav pl-4">
-                                                <li class="nav-item">
-                                                    <a class="nav-link p-1" href="#">
-                                                        <i class="fa fa-fw fa-clock-o"></i> Daily
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link p-1" href="#">
-                                                        <i class="fa fa-fw fa-dashboard"></i> Dashboard
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link p-1" href="#">
-                                                        <i class="fa fa-fw fa-bar-chart"></i> Charts
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link p-1" href="#">
-                                                        <i class="fa fa-fw fa-compass"></i> Areas
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Analytics</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Export</a></li>
-                    </ul>
-                </div>
-                <div class="col pt-2">
-                   
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-2 collapse d-md-flex bg-light pt-2 min-vh-100" id="sidebar">
+            <ul class="nav flex-column flex-nowrap">
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#submenu1" data-toggle="collapse" data-target="#submenu1">Reports</a>
+                    <div class="collapse" id="submenu1" aria-expanded="false">
+                        <ul class="flex-column pl-2 nav">
+                            <li class="nav-item"><a class="nav-link py-0" href="#">View ATE Information</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="#">ATE Logs</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="#">List Alarms</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="#">Non-connected ATE</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="#">FRAUD ATE</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="#">List of ATE(s)</a></li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">Command Center</a></li>
+            </ul>
         </div>
+        <div class="col pt-2">
+                <a href="" data-target="#sidebar" data-toggle="collapse" class="d-md-none"><i class="fa fa-bars"></i></a>
+                
+          
+            
+        </div>
+    </div>
+</div>
