edit command center main UI

--- a/src/app/command-center/command-center.component.html
+++ b/src/app/command-center/command-center.component.html
@@ -39,7 +39,7 @@
 </div>
 
 <!-- Search For Device  -->
-<div class="container row  align-content-center pt-5">
+<div class="container row  align-content-center pt-3">
   <div class="container col-4">
     <input
       class="form-control form-control-lg pl-2"
@@ -55,13 +55,15 @@
     />
   </div>
   <div class="container pr-3 col-4">
-    <button type="button" class="btn btn-lg btn-outline-primary">Sreach</button>
+    <button type="button" class="btn btn-lg btn-outline-primary ml-3">
+      Sreach
+    </button>
   </div>
 </div>
 
 <!-- table of selected Devices -->
-<div class=" pl-3 pr-5 pt-5 ">
-  <table class="table table-striped">
+<div class=" pl-3 pr-5 pt-3">
+  <table class="table table-bordered table-hover table-striped w-75">
     <thead>
       <tr>
         <th scope="col">Device ID</th>
@@ -84,3 +86,7 @@
     </tbody>
   </table>
 </div>
+
+<!-- <div class="container row pt-3 pl-5">
+  <div class="col-md-10 bs-linebreak"></div>
+</div> -->
