--- a/src/app/command-center/command-center.component.css
+++ b/src/app/command-center/command-center.component.css
@@ -1,3 +1,14 @@
+/* Table hover color */
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+  background-color: #89cff0;
+}
+
+.bs-linebreak {
+  height: 3px;
+  background-color: darkgray;
+}
+
 /* .main-div {
   background: #ea4623;
 }
