--- a/src/app/command-center/command-center.component.css
+++ b/src/app/command-center/command-center.component.css
@@ -8,11 +8,6 @@
   height: 3px;
   background-color: darkgray;
 }
-
-/* .main-div {
-  background: #ea4623;
+.nopadding {
+  padding-right: 0 !important;
 }
-
-.search-div {
-  background: #5fea23;
-} */
