--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,38 +1,56 @@
-<nav   class="navbar navbar-light bg-light"  id="navbar-header" >
+<nav class="navbar navbar-light bg-light" id="navbar-header">
+  <div class="navbar-brand" id="navbar-title">
+    Hassantuk Reporting
+  </div>
+  <button class="btn btn-primary" type="submit">Logout</button>
+</nav>
 
-        <div class="navbar-brand"  id="navbar-title">
-          Hassantuk Reporting
-        </div>
-        <button class="btn btn-primary" type="submit">Logout</button>
-
-      </nav>
-
-      <div class="container-fluid">
-    <div class="row">
-        <div class="col-2 collapse d-md-flex bg-light pt-2 min-vh-100" id="sidebar">
-            <ul class="nav flex-column flex-nowrap">
-                <li class="nav-item">
-                    <a class="nav-link collapsed" href="#submenu1" data-toggle="collapse" data-target="#submenu1">Reports</a>
-                    <div class="collapse" id="submenu1" aria-expanded="false">
-                        <ul class="flex-column pl-2 nav">
-                            <li class="nav-item"><a class="nav-link py-0" href="#">View ATE Information</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">ATE Logs</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">List Alarms</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">Non-connected ATE</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">FRAUD ATE</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">List of ATE(s)</a></li>
-
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#">Command Center</a></li>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2 collapse d-md-flex bg-light pt-2 min-vh-100" id="sidebar">
+      <ul class="nav flex-column flex-nowrap">
+        <li class="nav-item">
+          <a
+            class="nav-link collapsed"
+            href="#submenu1"
+            data-toggle="collapse"
+            data-target="#submenu1"
+            >Reports</a
+          >
+          <div class="collapse" id="submenu1" aria-expanded="false">
+            <ul class="flex-column pl-2 nav">
+              <li class="nav-item">
+                <a class="nav-link py-0" href="#">View ATE Information</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link py-0" href="#">ATE Logs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link py-0" href="#">List Alarms</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link py-0" href="#">Non-connected ATE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link py-0" href="#">FRAUD ATE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link py-0" href="#">List of ATE(s)</a>
+              </li>
             </ul>
-        </div>
-        <div class="col pt-2">
-                <a href="" data-target="#sidebar" data-toggle="collapse" class="d-md-none"><i class="fa fa-bars"></i></a>
-                
-          
-            
-        </div>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Command Center</a>
+        </li>
+      </ul>
     </div>
+    <div class="col pt-2">
+      <a href="" data-target="#sidebar" data-toggle="collapse" class="d-md-none"
+        ><i class="fa fa-bars"></i
+      ></a>
+
+      <app-command-center></app-command-center>
+    </div>
+  </div>
 </div>
