--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -15,24 +15,22 @@
                     <a class="nav-link collapsed" href="#submenu1" data-toggle="collapse" data-target="#submenu1">Reports</a>
                     <div class="collapse" id="submenu1" aria-expanded="false">
                         <ul class="flex-column pl-2 nav">
-                            <li class="nav-item"><a class="nav-link py-0" href="#">View ATE Information</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">ATE Logs</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">List Alarms</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">Non-connected ATE</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">FRAUD ATE</a></li>
-                            <li class="nav-item"><a class="nav-link py-0" href="#">List of ATE(s)</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="main">View ATE Information</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="main">ATE Logs</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="main">List Alarms</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="main">Non-connected ATE</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="main">FRAUD ATE</a></li>
+                            <li class="nav-item"><a class="nav-link py-0" href="main">List of ATE(s)</a></li>
 
                         </ul>
                     </div>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">Command Center</a></li>
+                <li class="nav-item"><a class="nav-link" href="command-center">Command Center</a></li>
             </ul>
         </div>
         <div class="col pt-2">
                 <a href="" data-target="#sidebar" data-toggle="collapse" class="d-md-none"><i class="fa fa-bars"></i></a>
-                
-          
-            
-        </div>
+        <app-reporting></app-reporting>
+            </div>
     </div>
 </div>
