--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,14 +5,7 @@
   <button class="btn btn-primary" type="submit">Logout</button>
 </nav>
 
-<<<<<<< HEAD
-        <div class="navbar-brand"  id="navbar-title">
-          Hassantuk Reporting
-        </div>
-        <button class="btn btn-primary" type="submit">Logout</button>
-
-      </nav>
-
+      
       <div class="container-fluid">
     <div class="row">
         <div class="col-2 collapse d-md-flex bg-light pt-2 min-vh-100" id="sidebar">
@@ -36,9 +29,9 @@
         </div>
         <div class="col pt-2">
                 <a href="" data-target="#sidebar" data-toggle="collapse" class="d-md-none"><i class="fa fa-bars"></i></a>
-        <app-reporting></app-reporting>
+        <app-command-center></app-command-center>
             </div>
 
     </div>
   </div>
-</div>
+
