--- a/src/app/reporting/reporting.component.html
+++ b/src/app/reporting/reporting.component.html
@@ -5,19 +5,19 @@
         <input class="form-control col" placeholder="From Date"
         name="dp1" [(ngModel)]="modelFrom" ngbDatepicker #d="ngbDatepicker">
         <div class="input-group-append">
-                <button class="btn btn-outline-secondary calendar"  (click)="d.toggle()" type="button"></button>
+                <button class="btn btn-outline-secondary calendar cal"  (click)="d.toggle()" type="button"></button>
               </div>
               <input class="form-control col" placeholder="From Date" style="margin-left: 1%;"
               name="dp2" [(ngModel)]="modelTo" ngbDatepicker #d1="ngbDatepicker">
               <div class="input-group-append">
-                      <button class="btn btn-outline-secondary calendar"  (click)="d1.toggle()" type="button"></button>
+                      <button class="btn btn-outline-secondary calendar cal"   (click)="d1.toggle()" type="button"></button>
                     </div>
                     <button style="margin-left: 1%;" type="Login" class="btn btn-primary form-control col" (click)="login()">Search</button>
 
             
     </div>
-    
-<table class="table table-striped" style="margin-top: 15;">
+    <h4 style="color: cornflowerblue;"> ATE Logs Report</h4>
+<table class="table table-striped" style="margin-top: 15;"> 
         <thead>
         <tr>
           <th scope="col">ATE Tag Number</th>
